--- a/shah.manali/css/style.css
+++ b/shah.manali/css/style.css
@@ -1,6 +1,8 @@
+/* CSS RESET */
+
 
 *, *::after, *::before {
-	box-sizing:border-box;
+   box-sizing:border-box;
 }
 
 :root {
@@ -15,12 +17,18 @@
    --color-neutral-medium: #788578;
    --color-neutral-dark: #304830;
 
+   --color-main-light: #e4fcd1;
+   --color-main-medium: #6dd21d;
+   --color-main-dark: #234905;
+
    --color-black:#000;
    --color-white:#fff;
 
 
-   --header-height: 3em;
+
+   --header-height:3rem;
 }
+
 
 body {
    margin:0;
@@ -37,9 +45,6 @@ h6 {
    font-family:var(--font-serif);
 }
 
-header h1 {
-   font-size:1em;
-}
 
 a {
    color:inherit;
@@ -63,7 +68,11 @@ a:hover {
    margin-right: auto;
 }
 
-display-flex { display:flex; }
+
+.hidden { display:none; }
+
+
+.display-flex { display:flex; }
 .display-block { display:block; }
 .display-inline-flex { display:inline-flex; }
 .display-inline-block { display:inline-block; }
@@ -77,30 +86,31 @@ display-flex { display:flex; }
 
 
 
-/* component classes  */
+
+/* Component Classes */
 
 .navbar {
    background-color:var(--color-neutral-dark);
    color:var(--color-neutral-lighter);
-   line-height: var(--header-height);
+   line-height:var(--header-height);
 }
 
 .navbar h1 {
    font-size:1em;
    font-family:var(--font-sans);
+   margin:0;
 }
-
-.navbar label, 
+.navbar label,
 .navbar a {
-	display: block;
-	padding: 0 0.5 em;
-	text-decoration: none;
+   display:block;
+   padding:0 0.5em;
 }
 .navbar a:hover {
    text-decoration: none;
    background-color:var(--color-neutral-light);
    color:var(--color-neutral-dark);
 }
+
 
 
 
@@ -113,6 +123,89 @@ display-flex { display:flex; }
 }
 
 
+
+
+
+
+
+/* ACCORDION */
+.accordion dt {
+    background-color: var(--color-neutral-mediumer);
+    padding: 0.5em 1em;
+    color: var(--color-white);
+    cursor:pointer;
+}
+.accordion dt~dt {
+   margin-top:0.5em;
+}
+.accordion dd {
+    margin: 0;
+    padding: calc(1em - 2px);
+    border: 2px solid var(--color-neutral-mediumer);
+    border-top-width: 0;
+    display:none;
+}
+
+
+
+
+
+
+/* TAB GROUP */
+.tabgroup {}
+.tabgroup .tabs {
+    display: flex;
+    border-bottom: 1px solid var(--color-neutral-light);
+}
+.tabgroup .tab {
+    padding: 0.5em 1em;
+    position:relative;
+}
+.tabgroup .tab:hover {
+    background-color:var(--color-neutral-lighter);
+    cursor:pointer;
+}
+.tabgroup .tab::after {
+   content:'';
+   position:absolute;
+   bottom:0;
+   left:0;
+   width:100%;
+   height:0;
+   transition:all 0.3s;
+   background-color:var(--color-main-medium);
+}
+.tabgroup .tab.active::after {
+   height:3px;
+}
+.tabgroup .contents {
+   height:30vh;
+   overflow:hidden;
+   position:relative;
+}
+.tabgroup .content {
+   position:absolute;
+   top:0;
+   left:0;
+   width:100%;
+   height:100%;
+   overflow:auto;
+   pointer-events:none;
+   opacity:0;
+   transition:all 0.3s;
+}
+.tabgroup .content.active {
+   opacity:1;
+   pointer-events:initial;
+}
+
+
+
+
+
+
+
+
 @media (max-width:1000px) {
    .container {
       padding-right: 1em;
@@ -120,6 +213,8 @@ display-flex { display:flex; }
    }
 }
 
+
+.menu-button { display:none; }
 
 @media (max-width:500px) {
    .navbar>.display-flex {
@@ -129,19 +224,16 @@ display-flex { display:flex; }
       width:100%;
    }
    .navbar .nav ul {
-      display:block;
+      display:none;
    }
 
-   .menu.button { display:block; }
+   .menu-button { display:block; }
 
    #menu:checked + .navbar .nav ul {
       display:block;
       padding-bottom: 0.5em;
    }
-
-      #menu:checked + .navbar .nav li {
-      	line-height: calc(var(--header-height) * 0.66);
-
+   #menu:checked + .navbar .nav li {
+      line-height: calc(var(--header-height) * 0.66);
    }
-
 }
