--- a/shah.manali/css/app.css
+++ b/shah.manali/css/app.css
@@ -82,7 +82,11 @@ a:hover {
 .flex-column { flex-direction:column; }
 
 
-
+.overscroll {
+   width: 100%;
+   height: 100%;
+   overflow: auto;
+}
 
 
 
@@ -197,3 +201,116 @@ a:hover {
    display:block;
    padding:0 1em;
 }
+
+
+
+ /*MODALS */
+.modal {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    transition: all 0.3s;
+    opacity: 0;
+    pointer-events: none;
+}
+.modal.active {
+   opacity:1;
+}
+.modal-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(0,0,0,0.7);
+}
+.modal-popup {
+   position:absolute;
+   top:50%;
+   left:50%;
+   transform:translate(-50%,calc(-50% + 3em));
+   width: 80vw;
+}
+.modal-body {
+    background-color: var(--color-white);
+    padding: 1em;
+}
+.modal-head, .modal-foot {
+    background-color: var(--color-neutral-lighter);
+    padding: 0.5em 1em;
+}
+
+
+.modal.active .modal-back,
+.modal.active .modal-popup {
+    pointer-events: initial;
+}
+.modal.active .modal-popup {
+   transform:translate(-50%,-50%);
+}
+
+
+
+/* MODAL DRAWER */
+.modal-drawer {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    transition: all 0.3s;
+}
+
+.modal-drawer.left,
+.modal-drawer.right {
+   height:100%;
+   width:70vw;
+}
+.modal.drawer.left {left:0; transform: translateX(-100%); }
+.modal.drawer.right {right:0; transform: translateX(100%); }
+
+.modal-drawer.top,
+.modal-drawer.bottom {
+   height:30vh;
+   width:100%;
+}
+
+.modal-drawer.top { top:0; transform:translateY(-100%); }
+.modal-drawer.bottom { bottom:0; transform:translateY(100%); }
+
+.modal.active .modal-drawer {
+   transform:translate(0);
+   pointer-events:initial;
+}
+
+
+.modal-drawer .modal-body {
+   flex: 1 1 100%;
+}
+
+
+
+
+
+/*FLOATER*/
+.floater { position:absolute; }
+.floater.right { right:1em; }
+.floater.left { left:1em; }
+.floater.top { top:1em; }
+.floater.bottom { bottom:1em; }
+
+
+/*circle button*/
+.btn-circle {
+    background-color: white;
+    line-height: 3rem;
+    width: 3rem;
+    display: inline-block;
+    text-align: center;
+    border-radius: 2rem;
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+    font-size: 1.5em;
+}
+
+
+
+
+
+
