--- a/shah.manali/css/app.css
+++ b/shah.manali/css/app.css
@@ -73,7 +73,7 @@ a:hover {
 .display-inline-flex { display:inline-flex; }
 .display-inline-block { display:inline-block; }
 
-.flex-stretch { flex: 1 1 auto; }
+.flex-stretch { flex: 2 2 auto; }
 .flex-none { flex:none; }
 
 .flex-align-center { align-items:center; }
@@ -87,6 +87,7 @@ a:hover {
    height: 100%;
    overflow: auto;
 }
+
 
 
 
@@ -124,12 +125,16 @@ a:hover {
     text-align: center;
 }
 
+.ui-link {
+    color: #51413c;
+}
 
 
 
 
 #signin-form,
-#signup-form {
+#signup-form,
+#password-form {
    padding:1em;
 }
 .signin-alt {
@@ -157,7 +162,6 @@ a:hover {
    width:100%;
    height:100%;
    overflow:hidden;
-   text-transform: uppercase;
 }
 
 
@@ -208,14 +212,40 @@ a:hover {
    padding:0 1em;
 }
 
-.grid-container{
+/*.grid-container{
   display: grid;
   grid-template-columns: auto auto;
-  grid-gap: 45px;
-  margin-top: 3em;
+  margin-top: 1em;
+  list-style: none;
+  padding: 0;
 }
 
 
+.grid-container li{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1.5em;
+}*/
+
+.plantlist-item {
+  height: 40vh;
+  background-position:center;
+   background-size:cover;
+  display:block;
+  flex-direction: column;
+  margin: 1em;
+  border-radius: 1em;
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
+  overflow: hidden;
+}
+
+.plantlist-image {
+  height: 30vh;
+ background: linear-gradient( rgba($dark, 0.25),
+ rgba($dark, 0.65) );
+ background-size: cover;
+}
 
 
  /*MODALS */
@@ -353,6 +383,20 @@ a:hover {
 
 
 
-
+/* PROFILE */
+.profile-image img {
+    border-radius: 50%;
+    width: calc(100vw - 4em);
+    height: calc(100vw - 4em);
+    object-fit: cover;
+    margin: 2em;
+}
+.profile-body {
+   padding:1em;
+}
+.profile-name {
+   font-size:1.5em;
+   margin-bottom: 1em;
+}
 
 
