again updated readme

--- a/shah.manali/css/app.css
+++ b/shah.manali/css/app.css
@@ -151,7 +151,7 @@ a:hover {
    font-size:0.8em;
 }
 #recent-page [data-role='main'] {
-   background-image:url(../img/map.jpg);
+   background-image:url(../img/map.png);
    background-position:center;
    background-size:cover;
 }
