--- a/shah.manali/css/app.css
+++ b/shah.manali/css/app.css
@@ -495,3 +495,46 @@ a:hover {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.color-dot {
+  display:inline-block;
+  width:1rem;
+  height:1rem;
+  border-radius:1em;
+}
+
+
+
+
