--- a/shah.manali/css/app.css
+++ b/shah.manali/css/app.css
@@ -337,7 +337,9 @@ a:hover {
    transform:translate(-50%,-50%);
 }
 
+.modal-close-floater {
 
+}
 
 /* MODAL DRAWER */
 .modal-drawer {
@@ -436,6 +438,21 @@ a:hover {
     box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
     font-size: 1.5em;
 }
+
+
+
+.modal-close-floater {
+    position: absolute;
+}
+.modal-close-floater.right {
+    right: 1em;
+}
+.modal-close-floater.top {
+    top: -1em;
+    transform: translateY(-100%);
+}
+
+
 
 
 
