--- a/shah.manali/css/app.css
+++ b/shah.manali/css/app.css
@@ -459,20 +459,40 @@ a:hover {
 /* PROFILE */
 .profile-image img {
     border-radius: 10%;
-    width: calc(75vw - -2em);
-    height: calc(75vw - 2em);
+    width: calc(100vw - 8em);
+    height: calc(100vw - 8em);
     object-fit: cover;
     margin: 2em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
 .profile-body {
    padding:1em;
 }
+
 .profile-name {
    font-size:1.5em;
    margin-bottom: 1em;
+   padding-left: 0.2em;
 }
 
+.profile-type {
+  font-size:1em;
+   padding-left: 0.75em;
+}
+
+.profile-color {
+  font-size:1em;
+   padding-left: 0.75em;
+}
+
+.profile-description {
+  font-size:1em;
+   padding-left: 0.75em;
+
+}
 
 .settings-list {
    list-style-type:none;
@@ -526,14 +546,24 @@ a:hover {
 }
 
 
+.plant-top {
+  flex:none;
+  position: relative;
+  height: 40vh;
+}
+
+.plant-bottom {
+  flex:1 1 100%;
+  position: relative;
+
+}
 
 
 
-
-
-
-
-
+.animal-top .profile-image img {
+    width: 30vw;
+    height: 30vw;
+}
 
 
 
