--- a/shah.manali/css/app.css
+++ b/shah.manali/css/app.css
@@ -142,7 +142,7 @@ a:hover {
    border: solid 2px #B5CFCF;
 
    padding:0.5em 1em;
-   border-radius:0.5em;
+   border-radius:2em;
    line-height:0.75;
    display:inline-flex;
 }
@@ -317,7 +317,8 @@ a:hover {
 .plantlist-item {
     display: flex;
     margin: 1em 0;
-    border-radius: 1em;
+ 
+  
 
     
 }
@@ -332,6 +333,7 @@ a:hover {
 .plantlist-description {
    font: 0.75em sans-serif;
    color: #7394A0;
+
 }
 
 
@@ -719,5 +721,19 @@ padding-bottom: 1em;
 }
 
 
+.image-uploader.full {
+   position:absolute;
+   top:0;
+   left:0;
+   width:100%;
+   height:100%;
 
-
+   background-size:contain;
+   background-repeat:no-repeat;
+}
+.ui-mobile label.image-uploader {
+   margin:0;
+}
+.image-uploader input {
+   display:none;
+}
