--- a/shah.manali/css/app.css
+++ b/shah.manali/css/app.css
@@ -688,7 +688,37 @@ padding-bottom: 1em;
 }
 
 
+.location-image{
+   top:0;
+   left:0;
+   width:100%;
+   height:50%%;
 
+   background-size:contain;
+   background-repeat:no-repeat;
+}
+
+/*.location-body{
+  padding: 1em;
+ 
+
+}
+*/
+.location-plant-health{
+  padding: 1em;
+  font-size: 1em;
+}
+
+.location-plant-health img{
+  display: inline-block;
+  width: 1.25em;
+  height: 1.25em;
+
+}
+.location-description{
+font-size: 1em;
+padding: 1em;
+}
 
 
 .settings-list {
